cabal-version:      >=1.10
name:               reflex-stone
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Ashesh Ambasta
maintainer:         ashesh@asheshambasta.com
build-type:         Simple
extra-source-files: README.md

executable reflex-stone
  hs-source-dirs:     src
  main-is:            Main.hs
  build-depends:
      base
    , reflex
    , reflex-dom
    , text
    , protolude 
    , containers
    , lens
    , data-default-class
    , witherable
    
  other-modules: 
    Main
    Exercises.Ex02
    Exercises.Ex03
    Exercises.Shared
    Lib.Reflex.Buttons
    Lib.Reflex.Clicks 

  default-extensions:
    DataKinds
    FlexibleContexts
    NoImplicitPrelude
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    GADTs 
    TypeFamilies
    DerivingVia 
    RecordWildCards

  ghc-options:        -Wall -threaded -Wno-unused-do-bind

  if impl(ghcjs -any)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER

  default-language:   Haskell2010

  if os(osx)
    ghc-options: -dynamic
